envoy-tls/envoy-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: envoy
  name: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  strategy: {}
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - image: envoyproxy/envoy:v1.14.4
        name: envoy
        resources: {}
        ports:
          - containerPort: 8443
            protocol: TCP
            name: https
        volumeMounts:
          - mountPath: /etc/ssl/private
            name: certificates
          - mountPath: /etc/envoy/
            name: envoy-config
      volumes:
        - name: certificates
          secret:
            secretName: envoy-tls
        - name: envoy-config
          configMap:
            name: envoy-config
