envoy-tls/envoy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: envoy-tls
  labels:
    app: envoy
  name: envoy
spec:
  ports:
  - name: 8443-8443
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: envoy
  type: ClusterIP
status:
  loadBalancer: {}
